# realm-js

./: CHANGELOG.md  RealmJS.podspec  package-lock.json  package.json
.github/workflows/: latest-install-test-react-native.yml
contrib/: vscode-debugging.md
integration-tests/environments/react-native/: package-lock.json  package.json
integration-tests/environments/react-native/ios/: Podfile
integration-tests/environments/react-native/ios/RealmReactNativeTests/: AppDelegate.m
integration-tests/tests/src/: index.ts
integration-tests/tests/src/hooks/: open-realm-before.ts
lib/: collection-methods.js  extensions.js
react-native/android/src/main/java/io/realm/react/: RealmReactModule.java
scripts/: build-android.js  download-realm.js
src/: CMakeLists.txt  js_object_accessor.hpp  js_realm.hpp  js_schema.hpp  js_types.hpp
src/android/: CMakeLists.txt  io_realm_react_RealmReactModule.cpp  io_realm_react_RealmReactModule.h
src/common/: js_plain_object.hpp
src/hermes/: CMakeLists.txt  hermes_class.hpp  hermes_return_value.hpp
src/jsc/: jsc_value.cpp
src/node/: node_buffer.hpp  node_class.hpp  node_value.hpp
src/set/: js_set.hpp  set_schema.hpp
src/set/collection/: collection.hpp  notification.hpp
src/set/methods/: accessors.hpp  callbacks.hpp  listeners.hpp
tests/: package-lock.json
tests/ReactTestApp/ios/ReactTestApp.xcodeproj/: project.pbxproj
tests/electron/: package-lock.json
types/: index.d.ts
